feat: Redis GEO 도입
# Conflicts:
#	.gitignore